Tabulator Dark Mode Initial Fix.

--- a/resources/css/tablar-kit.css
+++ b/resources/css/tablar-kit.css
@@ -29,3 +29,34 @@
 .FIE_topbar {
     justify-content: start;
 }
+
+/*Tabulator Dark mode Fix */
+
+.tabulator-menu .tabulator-menu-item {
+    color: #000;
+}
+
+.tabulator{
+    background-color:  var(--tblr-bg-forms) !important;
+}
+
+.tabulator .tabulator-header {
+    background-color:  var(--tblr-bg-forms) !important;
+}
+.tabulator-col{
+    background-color:  var(--tblr-bg-forms) !important;
+}
+
+.tabulator-cell{
+    background-color: var(--tblr-bg-forms) !important;
+}
+
+.tabulator-row {
+    background-color: var(--tblr-bg-forms) !important;
+}
+
+.tabulator-footer{
+    background-color: var(--tblr-bg-forms) !important;
+}
+
+
